--- a/DeserializeNestedJson/Pages/Index.razor
+++ b/DeserializeNestedJson/Pages/Index.razor
@@ -3,12 +3,4 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-FilterOptions.Text1["a"] : @FilterOptions.Text1["a"]
-@code {
-    [Inject]
-    private Model FilterOptions { get; set; }
-}
+<SomeComponent />
